--- a/pom.xml
+++ b/pom.xml
@@ -1,54 +1,109 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>ssb.scp.viewbrowser</groupId>
-    <artifactId>ssb.scp.viewbrowser</artifactId>
-    <version>0.1.0</version>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
-    </parent>
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.cloudfoundry</groupId>
-            <artifactId>cloudfoundry-client-reactor</artifactId>
-            <version>2.0.0.BUILD-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cloudfoundry</groupId>
-            <artifactId>cloudfoundry-operations</artifactId>
-            <version>2.0.0.BUILD-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-core</artifactId>
-            <version>2.5.0.BUILD-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-netty</artifactId>
-            <version>2.5.0.BUILD-SNAPSHOT</version>
-        </dependency>
-        
-    </dependencies>
-    
-    
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+	<modelVersion>
+		4.0.0
+	</modelVersion>
+	<groupId>
+		ssb.scp.viewbrowser
+	</groupId>
+	<artifactId>
+		ssb.scp.viewbrowser
+	</artifactId>
+	<version>
+		0.1.0
+	</version>
+	<parent>
+		<groupId>
+			org.springframework.boot
+		</groupId>
+		<artifactId>
+			spring-boot-starter-parent
+		</artifactId>
+		<version>
+			2.1.4.RELEASE
+		</version>
+	</parent>
+	<dependencies>
+		<dependency>
+			<groupId>
+				org.springframework.boot
+			</groupId>
+			<artifactId>
+				spring-boot-starter-web
+			</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>
+				org.cloudfoundry
+			</groupId>
+			<artifactId>
+				cloudfoundry-client-reactor
+			</artifactId>
+			<version>
+				2.0.0.BUILD-SNAPSHOT
+			</version>
+		</dependency>
+		<dependency>
+			<groupId>
+				org.cloudfoundry
+			</groupId>
+			<artifactId>
+				cloudfoundry-operations
+			</artifactId>
+			<version>
+				2.0.0.BUILD-SNAPSHOT
+			</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.cloudfoundry.identity/cloudfoundry-identity-client-lib -->
+		<dependency>
+			<groupId>
+				org.cloudfoundry.identity
+			</groupId>
+			<artifactId>
+				cloudfoundry-identity-client-lib
+			</artifactId>
+			<version>
+				4.12.3
+			</version>
+		</dependency>
+		<dependency>
+			<groupId>
+				io.projectreactor
+			</groupId>
+			<artifactId>
+				reactor-core
+			</artifactId>
+			<version>
+				2.5.0.BUILD-SNAPSHOT
+			</version>
+		</dependency>
+		<dependency>
+			<groupId>
+				io.projectreactor
+			</groupId>
+			<artifactId>
+				reactor-netty
+			</artifactId>
+			<version>
+				2.5.0.BUILD-SNAPSHOT
+			</version>
+		</dependency>
+	</dependencies>
+	<properties>
+		<java.version>
+			1.8
+		</java.version>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>
+					org.springframework.boot
+				</groupId>
+				<artifactId>
+					spring-boot-maven-plugin
+				</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
