Configuration Of Destination complete Created Destination manager and Authorisation Manger JWT token handling done as part of AuthManager and DestinationManager Conectivity service base setup and coding complete. Error on connection needs to be verified via a rest client.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			</version>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
+		<dependency>
 			<groupId>
 				org.cloudfoundry
 			</groupId>
@@ -87,6 +92,11 @@
 			<version>
 				2.5.0.BUILD-SNAPSHOT
 			</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
 		</dependency>
 	</dependencies>
 	<properties>
